kubernetes/infra/controllers/argocd/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - { name: external, namespace: gateway }
  hostnames: [ argo.timourhomelab.org ]
  rules:
    - backendRefs: [ { name: argocd-server, port: 443 } ]
